WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284638
REGRESSION(
287711@main
): Multiple API tests are failing or timing out
https://bugs.webkit.org/show_bug.cgi?id=284638
Summary
REGRESSION(287711@main): Multiple API tests are failing or timing out
Ryosuke Niwa
Reported
2024-12-13 09:33:10 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-12-13 09:42:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37917
Ryosuke Niwa
Comment 2
2024-12-13 09:43:04 PST
See
https://build.webkit.org/#/builders/1236/builds/651/steps/19/logs/stdio
Ryosuke Niwa
Comment 3
2024-12-13 09:49:23 PST
***
Bug 284635
has been marked as a duplicate of this bug. ***
Ryosuke Niwa
Comment 4
2024-12-13 09:49:38 PST
<
rdar://problem/141441315
>
EWS
Comment 5
2024-12-13 10:49:49 PST
Committed
287801@main
(137df84c0b4f): <
https://commits.webkit.org/287801@main
> Reviewed commits have been landed. Closing PR #37917 and removing active labels.
Radar WebKit Bug Importer
Comment 6
2024-12-13 10:50:15 PST
<
rdar://problem/141446918
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug