REGRESSION(287711@main): Multiple API tests are failing or timing out https://bugs.webkit.org/show_bug.cgi?id=284638

Reviewed by Chris Dumez.

Use a thread safe CheckedPtr instead of single thread WeakPtr.
LegacyCustomProtocolManager is owned by NetworkProcess as a supplement.

* Source/WebKit/NetworkProcess/CustomProtocols/LegacyCustomProtocolManager.h:
* Source/WebKit/NetworkProcess/NetworkProcess.h:

Canonical link: https://commits.webkit.org/287801@main